--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/BlindBane/mvp#readme",
   "dependencies": {
     "express": "^4.15.2",
+    "mongoose": "^4.8.6",
     "pug": "^2.0.0-beta11"
   }
 }
