--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "<!--  > This material was originally posted [here](http://www.quora.com/What-is-Amazons-approach-to-product-development-and-product-management). It is reproduced here for posterities sake.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon server/server.js"
   },
   "repository": {
     "type": "git",
@@ -17,10 +18,13 @@
   },
   "homepage": "https://github.com/BlindBane/mvp#readme",
   "dependencies": {
+    "body-parser": "^1.17.1",
     "express": "^4.15.2",
     "gulp": "^3.9.1",
     "gulp-pug": "^3.2.0",
     "mongoose": "^4.8.6",
-    "pug": "^2.0.0-beta11"
+    "morgan": "^1.8.1",
+    "pug": "^2.0.0-beta11",
+    "q": "^1.4.1"
   }
 }
