--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "angular": "^1.6.2",
     "body-parser": "^1.17.1",
     "express": "^4.15.2",
+    "mongoose": "^4.9.0",
     "nodemon": "^1.11.0"
   }
 }
